// CloudCore/grpc/item.proto

// Версия ProtoBuf
syntax = "proto3";

// Текущий пакет - указывает пространство имен для сервиса и сообщений. Помогает избегать конфликтов имен.
package grpc;

option go_package = "grpc.v1";

// Auth is service for managing permissions and roles.
service Auth {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);
}

// TODO: На будущее, следующий сервис можно описать прямо здесь,
// либо вынести в отдельный файл
// service Permissions {
//    GetUserPermissions(GetUserPermissionsRequest) return UserPermissions
// }

message RegisterRequest {
    string email = 1; // Email of the user to register.
    string password = 2; // Password of the user to register.
  }
  
  // Объект, который метод (ручка) вернёт.
  message RegisterResponse {
    bytes err_id = 1; // Eroor ID of the registered user.
  }

  message LoginRequest {
    string email = 1; // Email of the user to login.
    string password = 2; // Password of the user to login.
  }
  
  message LoginResponse {
    string token = 1; // Auth token of the logged in user.
  }